Add liturgical calendar, church dedication, mass notes feature
- Add 'Kostol zasvätený Najsvätejšej Trojici' to header
- Expand specialDates: Ash Wednesday, Palm Sunday, Ascension, Pentecost, Trinity Sunday (Odpustová slávnosť), Corpus Christi, All Saints
- Trinity Sunday (May 31) marked as 'Odpustová slávnosť'
- Add mass note/poznámka feature: each mass can have a note displayed under type name in smaller italic text in parentheses
- Notes stored in localStorage, editable via pencil icon
- Service Worker bumped to v3

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
                 <i class="fas fa-church"></i>
                 <div>
                     <h1>Lektori</h1>
-                    <p class="subtitle">Rozpis čítaní na sv. omšiach</p>
+                    <p class="subtitle">Kostol zasvätený Najsvätejšej Trojici</p>
+                    <p class="subtitle-small">Rozpis čítaní na sv. omšiach</p>
                 </div>
             </div>
             <nav class="main-nav">
