--- a/index.html
+++ b/index.html
@@ -225,6 +225,68 @@
 
                 <hr class="admin-divider">
 
+                <!-- ===== ADMIN CONTACT & NOTIFICATIONS ===== -->
+                <div class="admin-contact-section">
+                    <h2><i class="fas fa-user-shield"></i> Kontakt na admina & Notifikácie</h2>
+                    <p class="reminders-description">
+                        Zadajte kontaktné údaje admina. Keď sa niekto priradí ako lektor alebo požiada o zmenu,
+                        automaticky sa odošle notifikácia na tieto kontaktné údaje.
+                    </p>
+
+                    <div class="admin-contact-cards">
+                        <div class="setting-card">
+                            <div class="setting-icon whatsapp">
+                                <i class="fab fa-whatsapp"></i>
+                            </div>
+                            <h3>WhatsApp admina</h3>
+                            <div class="form-group" style="margin-top: 0.5rem; width: 100%;">
+                                <input type="tel" id="adminPhone" placeholder="+421 900 123 456" style="width: 100%;">
+                            </div>
+                        </div>
+
+                        <div class="setting-card">
+                            <div class="setting-icon email">
+                                <i class="fas fa-envelope"></i>
+                            </div>
+                            <h3>Email admina</h3>
+                            <div class="form-group" style="margin-top: 0.5rem; width: 100%;">
+                                <input type="email" id="adminEmail" placeholder="admin@email.com" style="width: 100%;">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="admin-notif-toggles">
+                        <div class="admin-notif-toggle-row">
+                            <div class="admin-notif-toggle-info">
+                                <i class="fas fa-user-plus" style="color: var(--success)"></i>
+                                <div>
+                                    <strong>Notifikácia pri novom priradení</strong>
+                                    <small>Keď sa niekto priradí k omši, dostanete správu</small>
+                                </div>
+                            </div>
+                            <label class="toggle-switch">
+                                <input type="checkbox" id="adminNotifyAssign" checked>
+                                <span class="slider"></span>
+                            </label>
+                        </div>
+                        <div class="admin-notif-toggle-row">
+                            <div class="admin-notif-toggle-info">
+                                <i class="fas fa-exchange-alt" style="color: var(--warning)"></i>
+                                <div>
+                                    <strong>Notifikácia pri žiadosti o zmenu</strong>
+                                    <small>Keď niekto klikne na zamknuté priradenie</small>
+                                </div>
+                            </div>
+                            <label class="toggle-switch">
+                                <input type="checkbox" id="adminNotifyChange" checked>
+                                <span class="slider"></span>
+                            </label>
+                        </div>
+                    </div>
+                </div>
+
+                <hr class="admin-divider">
+
                 <div class="reminders-section">
                     <h2><i class="fas fa-bell"></i> Systém pripomienok</h2>
                     <p class="reminders-description">
@@ -321,27 +383,6 @@
                             </label>
                         </div>
                     </div>
-
-                    <!-- ===== ADMIN CONTACT FOR CHANGE REQUESTS ===== -->
-                    <details class="emailjs-config admin-contact-config">
-                        <summary>
-                            <i class="fas fa-user-shield"></i> Kontakt na admina (pre žiadosti o zmenu)
-                        </summary>
-                        <div class="emailjs-config-body">
-                            <p class="emailjs-info">
-                                Keď niekto klikne na priradeného lektora, zobrazí sa mu možnosť "Požiadať o zmenu".
-                                Žiadosť sa odošle na tieto kontaktné údaje.
-                            </p>
-                            <div class="form-group">
-                                <label for="adminPhone"><i class="fab fa-whatsapp"></i> Telefón admina (WhatsApp)</label>
-                                <input type="tel" id="adminPhone" placeholder="napr. +421900123456">
-                            </div>
-                            <div class="form-group">
-                                <label for="adminEmail"><i class="fas fa-envelope"></i> Email admina</label>
-                                <input type="email" id="adminEmail" placeholder="napr. admin@email.com">
-                            </div>
-                        </div>
-                    </details>
 
                     <!-- ===== EmailJS CONFIG ===== -->
                     <details class="emailjs-config">
