fix: jedno tlačidlo 'Požiadať o zmenu' - pošle na WhatsApp aj email naraz

--- a/index.html
+++ b/index.html
@@ -550,11 +550,8 @@
                 </div>
                 <div class="form-actions change-request-actions">
                     <button type="button" class="btn btn-secondary" id="cancelChangeRequest">Zrušiť</button>
-                    <button type="button" class="btn btn-whatsapp" id="sendChangeWhatsApp">
-                        <i class="fab fa-whatsapp"></i> WhatsApp
-                    </button>
-                    <button type="button" class="btn btn-primary" id="sendChangeEmail">
-                        <i class="fas fa-envelope"></i> Email
+                    <button type="button" class="btn btn-primary btn-large" id="sendChangeRequest">
+                        <i class="fas fa-paper-plane"></i> Požiadať o zmenu
                     </button>
                 </div>
             </div>
